# ANLP-Yuriiformer-reproduce

./: .gitignore  README.md  adam_eval.sbatch  adam_eval_model.py  adam_eval_run.py  adam_model.py  adam_train.py  adam_train.sbatch  adam_train_2gpu.sbatch  adam_train_4gpu.sbatch  adam_train_ddp.py  adam_train_general.sbatch  adam_train_owt.py  adam_train_owt.sbatch  adamw_eval.sbatch  adamw_eval_model.py  adamw_eval_run.py  adamw_model.py  adamw_train_4gpu.sbatch  adamw_train_ddp.py  adamw_train_owt.py  adamw_train_owt.sbatch  adamw_train_preempt.sbatch  attention_entropy.py  attention_entropy.sbatch  data.py  data_owt.py  dump_tmm_scalars.py  eval.sh  eval_model.py  eval_run.py  hf_download_base_checkpoints.py  hf_upload_checkpoints.py  hf_upload_checkpoints.sbatch  hybrid_eval.sbatch  hybrid_eval_model.py  hybrid_eval_run.py  loss_sharpness.py  loss_sharpness.sbatch  model.py  (+68 more)
