[project]
name = "yuriiformer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "tiktoken",
    "numpy",
    "wandb",
    "requests",
    "datasets>=4.8.4",
    "lm-eval==0.4.3",
    "matplotlib>=3.10.8",
    "scipy>=1.15.3",
]

[tool.uv]
find-links = ["https://download.pytorch.org/whl/cu128"]
